# prosper-or-perish-constructor

./: .gitignore  AGENTS.md  README.md  constructor.load_order.toml  constructor.toml  labeling_output_modifiers.yaml  population_capacity.toml  population_capacity_control_points.csv  population_capacity_hypotheses.csv  population_capacity_saturation_anchors.toml  pyproject.toml
.agents/skills/prosper-or-perish-workflows/: SKILL.md
blueprints/: buildings.manifest.yml
blueprints/accepted/buildings/: alum_quarry.yml  alum_works.yml  amber_collector.yml  armory.yml  barracks.yml  bog_iron_smelter.yml  bog_iron_smelter_blast_furnace.yml  bog_iron_smelter_coke_blast_furnace.yml  bog_iron_smelter_hot_blast_furnace.yml  bog_iron_smelter_slitting_mills.yml  bund.yml  charcoal_maker.yml  chili_plantation.yml  cinnabar_pit.yml  clay_pit.yml  clove_grove.yml  coal_mine.yml  coal_mine_improved.yml  coal_mine_revolutions.yml  cocoa_grove.yml  coffee_grove.yml  conscription_center.yml  construction_center.yml  cookery.yml  copper_mine.yml  copper_mine_adit.yml  cotton_plantation.yml  dock.yml  dry_dock.yml  dye_plantation.yml  elephant_kraal.yml  enclosed_sheep_walks.yml  farming_village.yml  fiber_crops_farm.yml  fishing_village.yml  forest_village.yml  fruit_orchard.yml  gem_gravel_pit.yml  gem_sluice.yml  gold_diggings.yml  (+58 more)
docs/: .nojekyll  index.html  labeling-output-modifiers.md
docs/examples/: goods_flow_explorer.html
graphs/savegame_notebooks/: savegame_analysis_workbench.ipynb
mod/Prosper or Perish (Population Growth & Food Rework)/: .cursorrules
mod/Prosper or Perish (Population Growth & Food Rework)/.cursor/rules/: pp-farmed-goods-output-modifiers.mdc  pp-game-concepts-order.mdc  pp-map-mode-icons.mdc
mod/Prosper or Perish (Population Growth & Food Rework)/.metadata/: metadata.json
mod/Prosper or Perish (Population Growth & Food Rework)/in_game/common/advances/: pp_agricultural_innovations.txt  pp_cookery.txt  pp_farming_village.txt  pp_fishing_village.txt  pp_forest_village.txt  (+9 more)
mod/Prosper or Perish (Population Growth & Food Rework)/in_game/events/: pp_debug_events.txt
mod/Prosper or Perish (Population Growth & Food Rework)/in_game/gui/: encyclopedia_lateralview.gui
mod/Prosper or Perish (Population Growth & Food Rework)/tools/: sort_pp_rgo_static_bonuses.py
scripts/: analyze-constructor.ps1  generate_raw_material_local_map_modes.py  publish-docs-examples.ps1  savegame-constructor.ps1  sync-constructor.ps1
src/prosper_or_perish_constructor/: __init__.py  cli.py
tests/: test_blueprint_evaluation_rules.py  test_building_icon_uniqueness.py  test_building_upgrade_chains.py  test_no_premature_steel_inputs.py  test_population_capacity_config.py  test_ppc_cli.py  test_project_config.py  test_raw_material_local_map_modes.py  test_savegame_workbench_notebook.py
(+443 files in other folders)
